--- a/generator/config-options/ruby/dear-ruby-config.json
+++ b/generator/config-options/ruby/dear-ruby-config.json
@@ -8,5 +8,6 @@
   "gemSummary": "DEAR Ruby SDK generated from DEAR-OpenAPI Spec 3.0 for https://inventory.dearsystems.com",
   "gemVersion": "0.1.0",
   "httpUserAgent": "dear-ruby-#{VERSION}",
+  "library": "faraday",
   "moduleName": "DearRuby"
 }
