Update PriceTiersList to PriceTiers

--- a/specification/dear-inventory-apikey-ruby.yaml
+++ b/specification/dear-inventory-apikey-ruby.yaml
@@ -1924,7 +1924,7 @@ components:
       externalDocs:
         url: 'https://dearinventory.docs.apiary.io/#reference/price-tiers'
       properties:
-        PriceTiersList:
+        PriceTiers:
           description: Array of PriceTiers
           type: array
           items:
