Update param `TaskID` for `DELETE` of the endpoint `/sale/invoice`

--- a/specification/dear-inventory-apikey-ruby.yaml
+++ b/specification/dear-inventory-apikey-ruby.yaml
@@ -2968,8 +2968,8 @@ components:
         default: false
     taskID:
       in: query
-      name: ID
-      description: Default is nil
+      name: TaskID
+      description: ID of Sale task to Void or Undo
       schema:
         type: string
         nullable: true
